Changed label on button.

--- a/AddressBookApplication/src/address/Display.form
+++ b/AddressBookApplication/src/address/Display.form
@@ -13,7 +13,7 @@
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="List Addresses"/>
+          <text value="Display"/>
         </properties>
       </component>
       <scrollpane id="107b8" binding="scrollPane">
